@@ -1,5 +1,8 @@
 Revision history for Padre-Plugin-Parrot
 
+    - Fix colorize function to use current doc instead of assuming itself 
+      being a doc
+
 0.25 2009.07.23
 	- Remove the old Px:: constants
     - Replace the PASM_XYZ constant names by PADRE_color names to make PASM files highlight
